<resources>
    <string name="app_name" translatable="false">PrimeiroProjeto</string>
    <string name="label_titulo">Calculator</string>
    <string name="label_peso">Weigth</string>
    <string name="label_altura">Heigth</string>
    <string name="botao_caucular">Calculate</string>
    <string name="botao_limpar">Clear</string>
    <string name="hint_altura">Ex: 1.7</string>
    <string name="hint_peso">Ex: 1.7</string>
    <string name="label_titulo_resultado">Your IMC is:</string>
    <string name="label_rodape">developed by MIM</string>
    <string name="lbDescricao">Magreza</string>
    <string name="lbDescricao1">Abaixo do peso</string>
    <string name="lbDescricaoPesoIdeal">Peso Ideal</string>
    <string name="lbDescricaoAcimaDoPeso">Levemente acima do peso</string>
    <string name="lbDescricaoObesidade1">Gordo</string>
    <string name="lbDescricaoObesidade2">Gordo pra caraio</string>
    <string name="lbDescricaoObesidade3">Morre disgraca</string>
</resources>
